Fix wrong fonts path

--- a/assets/css/inter-ui.css
+++ b/assets/css/inter-ui.css
@@ -2,90 +2,90 @@
   font-family: 'Inter UI';
   font-style:  normal;
   font-weight: 400;
-  src: url("../font/inter-ui/Inter-UI-Regular.woff2") format("woff2"),
-       url("../font/inter-ui/Inter-UI-Regular.woff") format("woff");
+  src: url("../fonts/inter-ui/Inter-UI-Regular.woff2") format("woff2"),
+       url("../fonts/inter-ui/Inter-UI-Regular.woff") format("woff");
 }
 @font-face {
   font-family: 'Inter UI';
   font-style:  italic;
   font-weight: 400;
-  src: url("../font/inter-ui/Inter-UI-Italic.woff2") format("woff2"),
-       url("../font/inter-ui/Inter-UI-Italic.woff") format("woff");
+  src: url("../fonts/inter-ui/Inter-UI-Italic.woff2") format("woff2"),
+       url("../fonts/inter-ui/Inter-UI-Italic.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Inter UI';
   font-style:  normal;
   font-weight: 500;
-  src: url("../font/inter-ui/Inter-UI-Medium.woff2") format("woff2"),
-       url("../font/inter-ui/Inter-UI-Medium.woff") format("woff");
+  src: url("../fonts/inter-ui/Inter-UI-Medium.woff2") format("woff2"),
+       url("../fonts/inter-ui/Inter-UI-Medium.woff") format("woff");
 }
 @font-face {
   font-family: 'Inter UI';
   font-style:  italic;
   font-weight: 500;
-  src: url("../font/inter-ui/Inter-UI-MediumItalic.woff2") format("woff2"),
-       url("../font/inter-ui/Inter-UI-MediumItalic.woff") format("woff");
+  src: url("../fonts/inter-ui/Inter-UI-MediumItalic.woff2") format("woff2"),
+       url("../fonts/inter-ui/Inter-UI-MediumItalic.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Inter UI';
   font-style:  normal;
   font-weight: 600;
-  src: url("../font/inter-ui/Inter-UI-SemiBold.woff2") format("woff2"),
-       url("../font/inter-ui/Inter-UI-SemiBold.woff") format("woff");
+  src: url("../fonts/inter-ui/Inter-UI-SemiBold.woff2") format("woff2"),
+       url("../fonts/inter-ui/Inter-UI-SemiBold.woff") format("woff");
 }
 @font-face {
   font-family: 'Inter UI';
   font-style:  italic;
   font-weight: 600;
-  src: url("../font/inter-ui/Inter-UI-SemiBoldItalic.woff2") format("woff2"),
-       url("../font/inter-ui/Inter-UI-SemiBoldItalic.woff") format("woff");
+  src: url("../fonts/inter-ui/Inter-UI-SemiBoldItalic.woff2") format("woff2"),
+       url("../fonts/inter-ui/Inter-UI-SemiBoldItalic.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Inter UI';
   font-style:  normal;
   font-weight: 700;
-  src: url("../font/inter-ui/Inter-UI-Bold.woff2") format("woff2"),
-       url("../font/inter-ui/Inter-UI-Bold.woff") format("woff");
+  src: url("../fonts/inter-ui/Inter-UI-Bold.woff2") format("woff2"),
+       url("../fonts/inter-ui/Inter-UI-Bold.woff") format("woff");
 }
 @font-face {
   font-family: 'Inter UI';
   font-style:  italic;
   font-weight: 700;
-  src: url("../font/inter-ui/Inter-UI-BoldItalic.woff2") format("woff2"),
-       url("../font/inter-ui/Inter-UI-BoldItalic.woff") format("woff");
+  src: url("../fonts/inter-ui/Inter-UI-BoldItalic.woff2") format("woff2"),
+       url("../fonts/inter-ui/Inter-UI-BoldItalic.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Inter UI';
   font-style:  normal;
   font-weight: 800;
-  src: url("../font/inter-ui/Inter-UI-ExtraBold.woff2") format("woff2"),
-       url("../font/inter-ui/Inter-UI-ExtraBold.woff") format("woff");
+  src: url("../fonts/inter-ui/Inter-UI-ExtraBold.woff2") format("woff2"),
+       url("../fonts/inter-ui/Inter-UI-ExtraBold.woff") format("woff");
 }
 @font-face {
   font-family: 'Inter UI';
   font-style:  italic;
   font-weight: 800;
-  src: url("../font/inter-ui/Inter-UI-ExtraBoldItalic.woff2") format("woff2"),
-       url("../font/inter-ui/Inter-UI-ExtraBoldItalic.woff") format("woff");
+  src: url("../fonts/inter-ui/Inter-UI-ExtraBoldItalic.woff2") format("woff2"),
+       url("../fonts/inter-ui/Inter-UI-ExtraBoldItalic.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Inter UI';
   font-style:  normal;
   font-weight: 900;
-  src: url("../font/inter-ui/Inter-UI-Black.woff2") format("woff2"),
-       url("../font/inter-ui/Inter-UI-Black.woff") format("woff");
+  src: url("../fonts/inter-ui/Inter-UI-Black.woff2") format("woff2"),
+       url("../fonts/inter-ui/Inter-UI-Black.woff") format("woff");
 }
 @font-face {
   font-family: 'Inter UI';
   font-style:  italic;
   font-weight: 900;
-  src: url("../font/inter-ui/Inter-UI-BlackItalic.woff2") format("woff2"),
-       url("../font/inter-ui/Inter-UI-BlackItalic.woff") format("woff");
+  src: url("../fonts/inter-ui/Inter-UI-BlackItalic.woff2") format("woff2"),
+       url("../fonts/inter-ui/Inter-UI-BlackItalic.woff") format("woff");
 }
 
 /* --------------------------------------------------------------------------
@@ -112,8 +112,8 @@ BUGS:
   font-family: 'Inter UI var';
   font-weight: 400 900;
   font-style: oblique 0deg 10deg;
-  src: url("../font/inter-ui/Inter-UI.var.woff2") format("woff2-variations"),
-       url("../font/inter-ui/Inter-UI.var.woff2") format("woff2");
+  src: url("../fonts/inter-ui/Inter-UI.var.woff2") format("woff2-variations"),
+       url("../fonts/inter-ui/Inter-UI.var.woff2") format("woff2");
 }
 
 /* --------------------------------------------------------------------------
@@ -132,16 +132,16 @@ BUGS:
   font-weight: 400 900;
   font-style: normal;
   font-named-instance: 'Regular';
-  src: url("../font/inter-ui/Inter-UI-upright.var.woff2") format("woff2 supports variations(gvar)"),
-       url("../font/inter-ui/Inter-UI-upright.var.woff2") format("woff2-variations"),
-       url("../font/inter-ui/Inter-UI-upright.var.woff2") format("woff2");
+  src: url("../fonts/inter-ui/Inter-UI-upright.var.woff2") format("woff2 supports variations(gvar)"),
+       url("../fonts/inter-ui/Inter-UI-upright.var.woff2") format("woff2-variations"),
+       url("../fonts/inter-ui/Inter-UI-upright.var.woff2") format("woff2");
 }
 @font-face {
   font-family: 'Inter UI var alt';
   font-weight: 400 900;
   font-style: italic;
   font-named-instance: 'Italic';
-  src: url("../font/inter-ui/Inter-UI-italic.var.woff2") format("woff2 supports variations(gvar)"),
-       url("../font/inter-ui/Inter-UI-italic.var.woff2") format("woff2-variations"),
-       url("../font/inter-ui/Inter-UI-italic.var.woff2") format("woff2");
+  src: url("../fonts/inter-ui/Inter-UI-italic.var.woff2") format("woff2 supports variations(gvar)"),
+       url("../fonts/inter-ui/Inter-UI-italic.var.woff2") format("woff2-variations"),
+       url("../fonts/inter-ui/Inter-UI-italic.var.woff2") format("woff2");
 }
